# DAI_project

./: .gitignore  README.md  convert-depth.ipynb  extract.py.py  extract_depth.py  extract_depthcamera.py.py  get_requirements.ps1  get_requirements.sh  hello.py  main.py  output_image.raw  pyproject.toml  requirements.txt  setup_environment.sh  test.data
.devcontainer/: Dockerfile  devcontainer.json
DAI/: platform.py  start.py  utils.py
DAI/carla/: carla_client.py  spawner.py  world.py
DAI/classification/: .gitignore  classify.py  final_Carla_2.pth
DAI/cv/: __init__.py  calculate_distance.py  cv.py  lane_detection.py  object_detection.py  road_marker_detection.py  stabilizer.py  traffic_lane_segmentation.py  traffic_light_detection.py  traffic_sign_classification.py
DAI/cv/weights/: traffic_sign.pth
DAI/dataset_generator/: README.txt  extract.py.py  generate.py.py  spawn.py.py
DAI/environment/: __init__.py  agent.py  carla_env.py  carla_env_2.py  carla_setup.py  eval.py  feature_extractor.py
DAI/environment/env_RL/: carlaEnv.py  carla_setup.py  eval.py  test.py  testingRLLIB.py  train.py
DAI/environment/mock/: SAC.py  basicReward_follow.py  basicReward_slowingAndSpeeding.py  newReward_disappearing.py  newReward_full.py  newReward_noChangingSpeedlimit.py  newReward_noStop.py  newReward_slowingAndSpeeding.py  newReward_stop.py
DAI/interfaces/: __init__.py  data_carriers.py  image.py  interfaces.py  system.py  world.py
DAI/operations/: DistanceOperations.py  distance_operations.py  object_parameters_processing.py  test_dist_op.py
DAI/scripts/: cv_imp_test.py  extract_traffic_light_labels.py  label_traffic_lights.py  main.py  train.py
DAI/simulator/: __init__.py  car.py  carla_world.py  extract.py  numpy_image.py  segmentation.py  spawner.py  tracker.py  world.py
DAI/simulator/dataset_generator/: capture.py  label.py
DAI/simulator/wrappers/: __init__.py  carla_actor.py  carla_blueprint.py  carla_client.py  carla_color_converter.py  carla_command.py  carla_core.py  carla_traffic_manager.py  carla_utils.py  carla_world.py
DAI/traffic_sign_classification/: traffic_signs_classification.ipynb
DAI/visuals/: __init__.py  visual_utils.py  visuals.py
DAI/yolov7/: detect.py  requirements.twt  train.py
notebooks/: segmentation.ipynb
notebooks/Mock environment/: adaptive_cruise_control_env.py  training_PPG.py  training_PPO.py  training_SAC.py  training_SAC_hyperparameterTuning.py
sac_carla_env/SAC/: basic-variant-state-2024-12-04_17-20-52.json  basic-variant-state-2024-12-04_17-25-58.json  experiment_state-2024-12-04_17-20-52.json  experiment_state-2024-12-04_17-25-58.json
(+15 files in other folders)
