[project]
name = "dai"
version = "0.1.0"
description = "Distributed AI project of group 2. Combining Computer vision and machine learning to make a automated speed control"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "carla>=0.9.15",
    "ipykernel>=6.29.5",
    "lightning>=2.3.3",
    "loguru>=0.7.2",
    "numpy>=1.24.4",
    "opencv-python>=4.10.0.84",
    "pygame>=2.6.1",
    "ultralytics>=8.3.29",
    "wandb>=0.18.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
