[project]
name = "dai"
version = "0.1.0"
description = "Distributed AI project of group 2. Combining Computer vision and machine learning to make a automated speed control"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "carla>=0.9.15",
    "ipykernel>=6.29.5",
    "lightning>=2.3.3",
    "loguru>=0.7.2",
    "numpy>=1.24.4",
    "opencv-python>=4.10.0.84",
    "pygame>=2.6.1",
    "ultralytics>=8.3.29",
    "wandb>=0.18.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
]
cu124 = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
